# obs-output-screenshot

./: .gitignore  CMakeLists.txt  README.md  build.yml  index.html  obs-websocket-api.h  plugin-main.cpp  release.sh  setup-repo.sh
.github/workflows/: build.yml
package/macos/: Info.plist
src/: plugin-main.cpp
www/: index.html
